2010-06-03  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-local): Add missing call to clean-rt
	which should have replaced clean-plugs.

2010-03-16  Andrew John Hughes  <ahughes@redhat.com>

	* IcedTeaPlugin.cc,
	* plugin/icedtea/java/netscape/javascript/JSException.java,
	* plugin/icedtea/java/netscape/javascript/JSObject.java,
	* plugin/icedtea/java/netscape/javascript/JSObjectCreatePermission.java,
	* plugin/icedtea/java/netscape/javascript/JSProxy.java,
	* plugin/icedtea/java/netscape/javascript/JSRunnable.java,
	* plugin/icedtea/java/netscape/javascript/JSUtil.java,
	* plugin/icedtea/java/sun/applet/AppletSecurityContextManager.java,
	* plugin/icedtea/java/sun/applet/GetMemberPluginCallRequest.java,
	* plugin/icedtea/java/sun/applet/GetWindowPluginCallRequest.java,
	* plugin/icedtea/java/sun/applet/JavaConsole.java,
	* plugin/icedtea/java/sun/applet/PasswordAuthenticationDialog.java,
	* plugin/icedtea/java/sun/applet/PluginAppletSecurityContext.java,
	* plugin/icedtea/java/sun/applet/PluginAppletViewer.java,
	* plugin/icedtea/java/sun/applet/PluginCallRequest.java,
	* plugin/icedtea/java/sun/applet/PluginCallRequestFactory.java,
	* plugin/icedtea/java/sun/applet/PluginClassLoader.java,
	* plugin/icedtea/java/sun/applet/PluginCookieInfoRequest.java,
	* plugin/icedtea/java/sun/applet/PluginCookieManager.java,
	* plugin/icedtea/java/sun/applet/PluginDebug.java,
	* plugin/icedtea/java/sun/applet/PluginException.java,
	* plugin/icedtea/java/sun/applet/PluginMain.java,
	* plugin/icedtea/java/sun/applet/PluginMessageConsumer.java,
	* plugin/icedtea/java/sun/applet/PluginMessageHandlerWorker.java,
	* plugin/icedtea/java/sun/applet/PluginObjectStore.java,
	* plugin/icedtea/java/sun/applet/PluginProxyInfoRequest.java,
	* plugin/icedtea/java/sun/applet/PluginProxySelector.java,
	* plugin/icedtea/java/sun/applet/PluginStreamHandler.java,
	* plugin/icedtea/java/sun/applet/RequestQueue.java,
	* plugin/icedtea/java/sun/applet/TestEnv.java,